// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`azure-deploy - Trigger Tests Trigger Keywords Snapshot skill description triggers match snapshot 1`] = `
{
  "description": "Deploy already-prepared applications to Azure by running azd up, azd deploy, or infrastructure provisioning commands. Supports Bicep and Terraform projects. WHEN: "run azd up", "run azd deploy", "execute deployment", "provision infrastructure", "push to production", "push to cloud", "go live", "ship it", "bicep deploy", "terraform apply", "publish to Azure", "launch on Azure".",
  "extractedKeywords": [
    "already-prepared",
    "applications",
    "apply",
    "azure",
    "bicep",
    "cli",
    "cloud",
    "commands",
    "deploy",
    "deployment",
    "execute",
    "function",
    "identity",
    "infrastructure",
    "launch",
    "live",
    "mcp",
    "production",
    "projects",
    "provision",
    "provisioning",
    "publish",
    "push",
    "running",
    "ship",
    "supports",
    "terraform",
    "validation",
    "when",
  ],
  "name": "azure-deploy",
}
`;

exports[`azure-deploy - Trigger Tests Trigger Keywords Snapshot skill keywords match snapshot 1`] = `
[
  "already-prepared",
  "applications",
  "apply",
  "azure",
  "bicep",
  "cli",
  "cloud",
  "commands",
  "deploy",
  "deployment",
  "execute",
  "function",
  "identity",
  "infrastructure",
  "launch",
  "live",
  "mcp",
  "production",
  "projects",
  "provision",
  "provisioning",
  "publish",
  "push",
  "running",
  "ship",
  "supports",
  "terraform",
  "validation",
  "when",
]
`;
